tests/variables/errors/change_const_value.c
int main()
{
    const int n = 3500;
    n = 1;
    n = 1 + 1;
    return 0;
}